# voyager

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  config.example.toml  conftest.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: iterwheel_issue.md
.github/workflows/: benchmark.yml  ci.yml  release.yml
deploy/launchd/: com.iterwheel.voyager.bridge.plist  com.iterwheel.voyager.countdown-resolve-loop.plist
deploy/wukong/: bridge.env.example  countdown-resolve-loop.env.example  countdown-resolve-loop.repos.example
examples/: voyager.example.toml
rules/: VOY-0000-REF-Document-Index.md  VOY-1200-REF-Session-Retrospective-2026-05-23-D1-—-VOY-1811-loop-for-#76.md  VOY-1802-REF-Bot-Roster-Rocket-Factory.md  VOY-1805-SOP-GitHub-Bot-Accounts-and-Responsibilities.md  VOY-1806-SOP-GitHub-App-Permission-Matrix.md  VOY-1807-REF-GitHub-App-Registry.md  VOY-1808-ADR-Cross-Account-Installation-for-Iterwheel-GitHub-Apps.md  VOY-1809-CHG-Wave-7C-Severity-Demotion-Stale-Verdict-Guard.md  VOY-1810-SOP-Release-Process.md  VOY-1811-REF-Multi-Agent-Loop-Configuration.md  VOY-1812-REF-Discussion-Tracker-2026-05-17.md  VOY-1813-CHG-Surface-Clearance-writeback-failures-in-readiness-panel.md  VOY-1814-SOP-Wukong-Bridge-Launchd-and-Rollback.md  VOY-1815-SOP-Clearance-DeepSeek-Profile-Policy.md  VOY-1816-SOP-Managed-Repository-Canary-Expansion.md  VOY-1817-CHG-Assembly-Bot-MVP-Implementation.md  VOY-1820-CHG-Bridge-Deployable-Wheel-Artifact.md  VOY-1821-CHG-Assembly-Execution-Backend-Fake-Subprocess-and-Pi-Canary.md  VOY-1822-SOP-Assembly-Driven-Implementation-Loop.md  VOY-1823-SOP-Assembly-OMP-Audit-Lookup.md  VOY-1824-SOP-Assembly-Failure-Diagnostics.md  VOY-1825-REF-Loop-Convergence-Policy.md  VOY-1826-CHG-Clearance-Manual-Close-Dedupe.md  VOY-1827-HYP-Countdown-Dedicated-PAT-Fallback-Canary.md  VOY-1827-REF-Countdown-Dedicated-PAT-Fallback-Canary.md  VOY-1828-SOP-Countdown-Dedicated-PAT-Wukong-Canary.md  VOY-1829-CHG-Countdown-Dedicated-PAT-Fallback-Production-Gate.md  VOY-1830-CHG-Remove-Countdown-Dedicated-PAT-and-User-Token-Canary-Machinery.md  VOY-1830-PRP-Countdown-Multi-Repo-Review-Thread-Resolve-Loop.md  VOY-1831-PRP-Countdown-Multi-Repo-Resolve-Loop-on-Machine-Account-Resolver.md  VOY-1832-SOP-Codex-Review-Loop.md  VOY-1833-SOP-Voyager-Multi-Agent-Loop-Operation.md  VOY-1834-ADR-Cargo-Dependency-Bump-Preparation-Bot.md  VOY-1835-SOP-Countdown-Resolve-Loop-Launchd-Deployment.md
scripts/: build_wheel.sh  codex-review-watch.sh  codex_review_watch.py  loop_continue.sh
scripts/e2e/: README.md  dashboard.py  matrix.yaml  run_matrix.py
tests/: conftest.py  test_countdown_loop.py  test_resolve_conversation.py
tests/bdd/: conftest.py
tests/clearance/: test_close_reason_renderer.py  test_comment_renderer.py  test_compute_status.py  test_constants.py  test_evaluation_numbered_labels.py  test_known_limitations.py  test_overlay_beta.py  test_pipeline_clean_review.py  test_pipeline_thread_verdict_writeback.py  test_review_request.py  test_severity_input.py
tests/unit/: test_assembly_ac_spotcheck.py  test_assembly_actor.py  test_assembly_adapters.py  test_assembly_audit_manifest.py  test_assembly_branch.py  test_assembly_circuit_breaker.py  test_assembly_commands.py  (+65 more)
voyager/: __init__.py  build_info.py  cli.py  server.py
(+231 files in other folders)
